<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEFAD0"
    tools:context=".ui.CheckoutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_checkout_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="-25dp"
            android:paddingEnd="0dp"
            android:text="@string/toolbar_checkout"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_payment_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl"
        android:textSize="@dimen/text_title_size"
        android:text="@string/title_payment_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_checkout_activity" />

    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_marginLeft="@dimen/margin_md"
        android:layout_marginRight="@dimen/margin_md"
        android:padding="@dimen/padding_sm"
        android:hint="@string/hint_card_number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_details" />

    <EditText
        android:id="@+id/et_card_holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sm"
        android:layout_marginLeft="@dimen/margin_md"
        android:layout_marginRight="@dimen/margin_md"
        android:padding="@dimen/padding_sm"
        android:hint="@string/hint_card_holder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_card_number" />

    <LinearLayout
        android:id="@+id/ll_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_sm"
        android:padding="@dimen/padding_sm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_card_holder_name">

        <EditText
            android:id="@+id/et_mm_yy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sm"
            android:layout_marginEnd="@dimen/sl_margin_md"
            android:textSize="@dimen/text_lg"
            android:gravity="center"
            android:hint="@string/hint_mm_yy" />

        <EditText
            android:id="@+id/et_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sm"
            android:hint="@string/hint_cvv"
            android:gravity="center"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_sm"
        android:padding="@dimen/padding_sm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_payment">

        <TextView
            android:id="@+id/tv_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sm"
            android:layout_marginEnd="@dimen/sl_margin_md"
            android:textSize="@dimen/text_lg"
            android:text="@string/text_total" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xl"
            android:textSize="@dimen/text_md"
            android:textColor="@color/love"
            android:text="@string/hint_total_value" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_sm"
        android:layout_marginEnd="@dimen/margin_sm"
        android:text="@string/checkout"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_total" />

</androidx.constraintlayout.widget.ConstraintLayout>