<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEFAD0"
    tools:context=".ui.AddStayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_stay"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/quepal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="-25dp"
            android:paddingEnd="0dp"
            android:text="@string/toolbar_add_stay"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_stay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_stay_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sd_iv_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_stay_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/iv_placeholder"
                    android:contentDescription="@string/content_img"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_add_stay_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/content_img"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/padding_sm"
                    android:src="@drawable/compact_camera" />

            </FrameLayout>

            <EditText
                android:id="@+id/et_stay_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_margin="@dimen/margin_sm"
                android:padding="@dimen/padding_sm"
                android:hint="@string/hint_stay_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_stay_image" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_margin="@dimen/margin_sm"
                android:padding="@dimen/padding_sm"
                android:hint="@string/hint_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_stay_detail" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_margin="@dimen/margin_sm"
                android:padding="@dimen/padding_sm"
                android:hint="@string/hint_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_location" />

            <LinearLayout
                android:id="@+id/ll_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_sm"
                android:paddingStart="@dimen/padding_sm"
                android:paddingTop="@dimen/padding_sm"
                android:paddingBottom="@dimen/padding_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description">

                <TextView
                    android:id="@+id/tv_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_lg"
                    android:text="@string/currency_per_night" />

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_sm"
                    android:inputType="number"
                    android:hint="@string/hint_price" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_sm"
                android:layout_marginTop="@dimen/sd_btn_margin"
                android:layout_marginEnd="@dimen/margin_sm"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_lg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_price" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>