<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEFAD0"
    tools:context=".ui.StayDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_stay_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="-25dp"
            android:paddingEnd="0dp"
            android:text="Stay Details"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_stay_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_stay_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sd_iv_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_stay_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/iv_placeholder"
                    android:contentDescription="@string/content_img"
                    android:scaleType="fitXY" />

                <CheckBox
                    android:id="@+id/cb_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:button="@drawable/selector_favorite_stay"
                    app:useMaterialThemeColors="false" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:orientation="vertical"
                android:padding="@dimen/padding_xs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_stay_image">

                <TextView
                    android:id="@+id/tv_stay_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_sm"
                    android:textSize="@dimen/text_title_size"
                    android:hint="@string/hint_stay_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fl_stay_image" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_sm"
                    android:hint="@string/hint_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_stay_detail" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_sm"
                    android:hint="@string/hint_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

                <LinearLayout
                    android:id="@+id/ll_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_sm"
                    android:paddingTop="@dimen/padding_sm"
                    android:paddingBottom="@dimen/padding_sm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_description">

                    <TextView
                        android:id="@+id/tv_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_lg"
                        android:text="@string/currency_per_night" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_sm"
                        android:textSize="@dimen/text_md"
                        android:hint="@string/hint_price" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_sm"
                    android:layout_marginTop="@dimen/sd_btn_margin"
                    android:layout_marginEnd="@dimen/margin_sm"
                    android:gravity="center"
                    android:text="@string/book"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_lg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_price" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>